# trimal

./: .gitignore  .gitmodules  .readthedocs.yaml  00___cleaning_methods_8dox.html  00___other_tweaks_8dox.html  00___trimming_tweaks_8dox.html  00__main_page_8dox.html  01___col_numbering_8dox.html  01___custom_matrix_8dox.html  01___introduction_8dox.html  01___meta_automated_8dox.html  01__read_al_8dox.html  02___automated_statistical_8dox.html  02___complementary_8dox.html  02___keep_header_8dox.html  02___preprocessing_8dox.html  03___manual_thresholds_8dox.html  03___sequence_trimming_8dox.html  03___terminal_only_8dox.html  03___trimming_report_8dox.html  04___back_translation_8dox.html  04___block_8dox.html  04___manual_overlap_thresholds_8dox.html  04___residue_trimming_8dox.html  05___clusters_8dox.html  05___manual_8dox.html  05___post_process_8dox.html  06___alignment_8001_8fasta.html  06___alignment_8001_8fasta_source.html  06___automated_fixed_8dox.html  06___max_identity_8dox.html  06___output_8dox.html  07___compareset_8dox.html  08___min_conservation_8dox.html  3_810_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  3_810_82_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  3_810_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  3_812_83_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  3_812_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  AUTHORS  (+3297 more)
DockerFolder/: Dockerfile.readAl  Dockerfile.statAl  Dockerfile.trimAl
Documentation/: 00_mainPage.dox  01_readAl.dox  ConfigFile.txt  CustomLayout.xml  Documentation_SVG_Creator.sh  DoxygenConfigFile.txt  doxy-warnings.txt  header.html
LegacyCode/: alignment.cpp  alignment.h  autAlignment.cpp  main.cpp  rwAlignment.cpp  statisticsFiles.cpp  statisticsFiles.h
Scripts/: compareOutput.cmake
branch/: test.1
dataset/: AA1.fas  YKL197C.clw  YKL197C.msl  YKL197C.phy2  alignments_comparison.1  alignments_comparison.2  alignments_comparison.3  bctoNOG.ENOG41099FB.fasta  bctoNOG.ENOG41099UW.fasta  bctoNOG.ENOG41099VK.fasta  bctoNOG.ENOG41099XP.fasta  bctoNOG.ENOG41099Y4.fasta  bctoNOG.ENOG41099YD.fasta  bctoNOG.ENOG4109ADN.fasta  bctoNOG.ENOG4109AJ3.fasta  bctoNOG.ENOG4109B8Z.fasta  bctoNOG.ENOG4109CVC.fasta  bctoNOG.ENOG4109SZ2.fasta  example.001.AA.msl  example.001.AA.phy  example.002.AA.clw  example.002.AA.phy  example.003.AA.clw  example.005.AA.fasta  example.006.AA.pir  example.007.AA.fasta  example.010.AA.fasta  example.011.AA.YKL197C.fasta  example.012.AA.SuperAlignment.phy  example.017.AA.bctoNOG.ENOG41099FJ.fasta  example.018.AA.bctoNOG.ENOG41099FV.fasta  example.019.AA.bctoNOG.ENOG41099HI.fasta  example.020.AA.bctoNOG.ENOG41099HN.fasta  example.021.AA.bctoNOG.ENOG41099I5.fasta  example.022.AA.bctoNOG.ENOG41099IZ.fasta  example.023.AA.bctoNOG.ENOG41099K3.fasta  example.024.AA.bctoNOG.ENOG41099KM.fasta  example.025.AA.bctoNOG.ENOG41099KP.fasta  example.026.AA.bctoNOG.ENOG41099MV.fasta  example.027.AA.bctoNOG.ENOG41099NY.fasta  (+77 more)
docs/: 00___cleaning_methods_8dox.html  00___trimming_tweaks_8dox.html  00__main_page_8dox.html  01___custom_matrix_8dox.html  01___introduction_8dox.html  01__read_al_8dox.html  03___manual_thresholds_8dox.html  03___sequence_trimming_8dox.html  04___back_translation_8dox.html  04___block_8dox.html  04___manual_overlap_thresholds_8dox.html  05___manual_8dox.html  05___post_process_8dox.html  06___automated_fixed_8dox.html  06___max_identity_8dox.html  06___output_8dox.html  08___min_conservation_8dox.html  3_810_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  3_810_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  3_810_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  3_812_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  3_812_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  3_812_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  CustomExtra.css  _alignment_8dox.html  _alignment_8h.html  _base_format_handler_8h.html  _base_format_handler_8h_source.html  _cleaner_8cpp.html  _cleaner_8h.html  _consistency_8cpp.html  _consistency_8cpp.js  _consistency_8h.html  _consistency_8h_source.html  _format_manager_8h.html  _gaps_8cpp.html  _gaps_8h_source.html  _internal_benchmarker_8cpp.html  _manager_8h_source.html  _r_e_a_d_m_e_8md.html  (+447 more)
include/: Alignment.h  Cleaner.h  InternalBenchmarker.h  ReadWriteManager.h  StatisticsManager.h  TimerFactory.h  VCFHandler.h  alignment.h  compareFiles.h  defines.h  examples.txt  menu.txt  newAlignment.dox  newAlignment.h  reportsystem.h  residueValues.h  sequencesMatrix.h  similarityMatrix.h  statisticsConservation.h  statisticsConservation2.h  statisticsFiles.h  statisticsGaps.h  statisticsGapsLegacy.h  trimAlManager.h  trimalArgumentParser.documentation  trimalArgumentParser.dox  trimalArgumentParser.h  trimalManager.h  utils.alternative  utils.h  values.h  vcf_statish.h  vcf_statish.hx
scripts/: ManualTest.sh  ParseExecutionTimes.trimAl.ipynb  RF_distances_analyses.py  RF_for_automated2_chunks.sh  TestingTime.sh  analyse_phylomeDB_stats.py  automated2_algorithm.py  check_codon_alignments.py  compareTrimAlOutput.cmake  compareTrimAlReports.cmake  compareTrimAlSTD.cmake  compare_trimmed_msas.ps1  compare_trimmed_msas.sh  compute_RF_distances.sh  compute_seqs_stats.sh  compute_trees.sh  compute_trees_AA_cptime.sh  compute_trees_DNA.sh  compute_trees_DNA_cptime.sh  createdockerimages.sh  dummy-file.txt  encode_columns.py  filter_homfam_alignments.sh  generateRandomAlignmentsUsingAsSeedRealAlignments.py  generate_trees_automated2.sh  generate_trees_automated3.sh  generate_trimmed_msas.ps1  generate_trimmed_msas.sh  generate_trimmed_msas_Windows.sh  get_alignment_statistics.py  get_alignment_with_empty_seqs.sh  get_empty_seqs_stats.sh  get_sequence_representative_from_alignment.py  get_sequences_gaps_ratio.py  get_statistics.sh  measure_parameters_relevance.py  remove_shorter_sequences.py  selective_trimming_for_dNdS_analyses.based_neighbours.py  set_manual_boundaries.py  technical_performance_statistics.py  (+1 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  (+199 more)
(+1142 files in other folders)
